# RecommendationsAPI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  grafana_dashboards_config.yml  grafana_datasources.yml  prometheus.yml  promtail-config.yaml  pyproject.toml  seed.py  seed.sh
.github/workflows/: tests.yml
app/: Dockerfile  main.py
app/core/: config.py
app/db/: database.py
app/dependencies/: dependencies.py
app/errors/: carts_exceptions.py  categories_exceptions.py  items_exceptions.py  purchases_exceptions.py  users_exceptions.py
app/migrations/: env.py
app/migrations/versions/: 2026-01-30_start_database.py
app/models/: __init__.py  carts.py  categories.py  items.py  purchases.py  recommendations.py  users.py
app/repositories/: base_repository.py  carts.py  categories.py  items.py  purchases.py  recommendations.py  users.py
app/routers/: carts.py  categories.py  items.py  purchases.py  recommendations.py  users.py
app/schemas/: carts.py  categories.py  items.py  purchases.py  recommendations.py  users.py
app/services/: carts.py  categories.py  items.py  purchases.py  recommendations.py  users.py
app/utils/: auth.py  celery_tasks.py  logger.py  security.py  unitofwork.py
glitchtip/: docker-compose.yml
grafana_dashboards/: fastapi.json
nginx/: nginx.conf
tests/: conftest.py  test_categories.py
tests/test_carts/: conftest.py  test_carts.py
tests/test_categories/: conftest.py  test_categories.py
tests/test_items/: conftest.py  test_items.py
tests/test_purchases/: conftest.py  test_purchases.py
tests/test_recommendations/: conftest.py  test_recommendations.py
tests/test_users/: conftest.py  test_users.py
