[project]
name = "recs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.6.2",
    "fastapi>=0.128.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "sentry-sdk[celery,fastapi,sqlalchemy]>=2.51.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "eventlet>=0.40.4",
    "faker>=40.1.2",
    "faker-commerce>=1.0.4",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.5.1",
]

[tool.pytest.ini_options]
minversion = "9.0"
asyncio_mode = "auto"
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*", "*_test"]
addopts = [
    "-vv"
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort (сортировка импортов)
    "B",  # flake8-bugbear (поиск вероятных багов)
    "ASYNC", # flake8-async (проверки для асинхронного кода)
]
ignore = []

[tool.mypy]
python_version = "3.13"
explicit_package_bases = true
mypy_path = "."
ignore_missing_imports = true
check_untyped_defs = true
